# pdf_rag_app

./: .gitignore  pyproject.toml  run.py  ui.py
app/: __init__.py  config.py  rag.py  urls.py  views.py
